--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 
 # Profile information
-yourname: Brown Smith  ## put your name
-title: 'GRAPHIC &amp; WEB DESIGNER'  ## your title
-location: San Francisco , CA
+yourname: Marie Walker  ## put your name
+title: 'Full Stack JavaScript Developer'  ## your title
+location: Mesa, AZ
 
 
 ## Social Profiles
